fix(card): title fix bold and spacing (#739)

--- a/eds/blocks/cards/cards.css
+++ b/eds/blocks/cards/cards.css
@@ -271,9 +271,10 @@
     color: var(--calcite-ui-text-1);
     display: -webkit-box;
     font-size: var(--title-size);
+    font-weight: var(--calcite-font-weight-bold);
     -webkit-line-clamp: 4;
     line-clamp: 4;
-    margin-block-end: var(--space-3);
+    margin-block-end: var(--space-2);
     overflow: hidden;
     text-align: start;
   }
